<resources>
    <string name="app_name">monty-android</string>

    <!-- Bottom menu -->
    <string name="menu_adverts">Inzeráty</string>
    <string name="menu_my">Moje</string>
    <string name="menu_favourite">Obľúbené</string>
    <string name="menu_profile">Profil</string>

    <!-- Adverts -->
    <string name="adverts_title">Inzeráty</string>
    <string name="adverts_empty">Tu zatiaľ nič nemáme.\nPomôžeš nám s tým?</string>

    <!-- My Adverts -->
    <string name="my_adverts_title">Moje inzeráty</string>
    <string name="my_adverts_empty">Tu zatiaľ nič nemáš.\nChceš niečo pridať?</string>

    <!-- Favourite Adverts -->
    <string name="favourite_adverts_title">Obľúbené</string>
    <string name="favourite_adverts_empty">Ak sa ti niečo páči, tu si to neskôr nájdeš.</string>

    <!-- Profile -->
    <string name="profile_title">Profil</string>
    <string name="profile_first_name">Meno</string>
    <string name="profile_last_name">Priezvisko</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_phone">Telefónne číslo</string>
    <string name="profile_save">Uložiť</string>
    <string name="profile_save_success">Uloženo</string>
    <string name="profile_sign_in">Prihlásiť sa pomocou Google</string>
    <string name="profile_sign_in_info">Aplikácia Monty prináša revolučný spôsob prenájmu vašich vecí.\n\n Ak chcete využívať aplikáciu Monty naplno, prehlidať a pridávať nové inzeráty, prihláste sa prosím.</string>

    <!-- Categories -->
    <string name="categories_title">Kategórie</string>

    <!-- Advert Detail -->
    <string name="advert_detail_deposit_title">Kaucia</string>
    <string name="advert_detail_deposit_info">Nič sa neboj. Kaucia sa ti na konci vráti.</string>
    <string name="advert_detail_address_title">Kde to nájdem?</string>
    <string name="advert_detail_user_title">Kto to ponúka?</string>
    <string name="advert_detail_contact">Kontaktovať</string>

    <!-- Intervals -->
    <string name="interval_day">za deň</string>
    <string name="interval_week">za týždeň</string>
    <string name="interval_month">za mesiac</string>
    <string name="interval_total">celkovo</string>

    <!-- Create Advert -->
    <string name="create_advert_info">Názov a popis</string>
    <string name="create_advert_title">Názov</string>
    <string name="create_advert_description">Popis</string>
    <string name="create_advert_price">Cena</string>
    <string name="create_advert_deposit">Kaucia</string>
    <string name="create_advert_category">Kategória</string>
    <string name="create_advert_address">Kde to bude dostupné?</string>
    <string name="create_advert_address_info">Vybrať miesto na mape</string>
    <string name="create_advert_add_photo">Pridať fotku</string>
    <string name="create_advert_interval">Obdobie</string>
    <string name="create_advert_add">Pridať inzerát</string>
    <string name="create_advert_edit">Upraviť inzerát</string>
    <string name="create_advert_add_success">Inzerát bol pridaný</string>
    <string name="create_advert_edit_success">Inzerát bol upravený</string>

    <!-- Sort adverts dialog -->
    <string name="sort_advert_title">Radenie</string>
    <string name="sort_advert_by_newest">Podľa najnovších</string>
    <string name="sort_advert_by_nearest">Podľa najbližších</string>

    <!-- Map Search -->
    <string name="map_search_title">Vyberte miesto na mape</string>
    <string name="map_search_choose">Vybrať</string>

    <!-- Get photo dialog -->
    <string name="get_photo_dialog_camera">Vyfotit</string>
    <string name="get_photo_dialog_gallery">Vybrat fotku z galerie</string>
    <string name="toast_photo_too_large">Nelze nahrát fotku větší než %s MB</string>
    <string name="toast_cant_load_photo">Nepodařilo se načíst fotku</string>

    <!-- Error -->
    <string name="error_no_internet_connection">Skontrolujte internetové pripojenie a opakujte akciu prosím.</string>
    <string name="error_something_went_wrong">Niečo sa pokazilo. Opakujte akciu neskôr prosím.</string>

    <!-- Contact dialog -->
    <string name="contact_dialog_phone">Zavolať</string>
    <string name="contact_dialog_email">Napísať email</string>

    <!-- Delete advert dialog -->
    <string name="delete_advert_title">Vymazať inzerát</string>
    <string name="delete_advert_content">Vymazanie nie je možné vrátiť späť.</string>
    <string name="delete_advert_positivie">Vymazať</string>
    <string name="delete_advert_negative">Zrušiť</string>
</resources>
