<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_advert_toolbar"
        style="@style/Toolbar"
        android:titleTextAppearance="@style/ToolbarTitle"
        app:navigationIcon="@drawable/ic_back">

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/state_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/d4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/create_advert_images"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/create_advert_image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:animateLayoutChanges="true"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/create_advert_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/create_advert_image_delete"
                        android:layout_width="@dimen/d9"
                        android:layout_height="@dimen/d9"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_circle_button"
                        android:padding="6dp"
                        android:src="@drawable/ic_close_white"
                        android:tint="@color/red"
                        android:visibility="gone" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/create_advert_progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:background="@color/light_grey"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.pnikosis.materialishprogress.ProgressWheel
                        android:id="@+id/business_profile_edit_avatar_progress"
                        style="@style/ProgressWheel.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:scaleType="center"
                        wheel:matProg_barWidth="3dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/create_advert_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:background="@color/light_grey"
                    android:foreground="@drawable/bg_selected"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/create_advert_placeholder_image"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_add_photo"
                        android:tint="@color/red" />

                    <TextView
                        style="@style/TextRegular.Red.14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/d2"
                        android:text="@string/create_advert_add_photo" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_advert_title"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/create_advert_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_images">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_advert_titleEditText"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_advert_description"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/create_advert_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_advert_descriptionEditText"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_advert_price"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/create_advert_price"
                app:layout_constraintEnd_toStartOf="@+id/price_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_advert_priceEditText"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.monty.ui.common.SpinnerInputLayout
                android:id="@+id/create_advert_interval"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/price_guideline"
                app:layout_constraintTop_toTopOf="@+id/create_advert_price"
                app:spinner_hint="@string/create_advert_interval" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_advert_deposit"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/create_advert_deposit"
                app:layout_constraintEnd_toStartOf="@+id/price_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_advert_depositEditText"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_advert_category"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/create_advert_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/price_guideline"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_advert_categoryEditText"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/create_advert_category_click_area"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/create_advert_category"
                app:layout_constraintEnd_toEndOf="@+id/create_advert_category"
                app:layout_constraintStart_toStartOf="@+id/create_advert_category"
                app:layout_constraintTop_toTopOf="@+id/create_advert_category" />

            <TextView
                android:id="@+id/create_advert_address_title"
                style="@style/Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d4"
                android:layout_marginRight="@dimen/d4"
                android:text="@string/create_advert_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_deposit" />

            <androidx.cardview.widget.CardView
                android:id="@+id/create_advert_address_card"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="@dimen/d4"
                android:layout_marginTop="@dimen/d2"
                android:layout_marginRight="@dimen/d4"
                android:background="@color/light_grey"
                app:cardCornerRadius="@dimen/monty_radius"
                app:cardElevation="@dimen/d1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_address_title">


                <FrameLayout
                    android:id="@+id/advert_detail_map_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <fragment
                        android:id="@+id/advert_detail_map_card_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        map:mapType="normal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:id="@+id/advert_detail_map_card_no_map"
                        android:layout_height="match_parent">

                        <View
                            android:id="@+id/advert_detail_map_click"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            style="@style/Map"
                            android:drawableStart="@drawable/ic_map"
                            android:drawablePadding="@dimen/d2"
                            android:layout_gravity="center"
                            android:gravity="center_vertical"
                            android:drawableTint="@color/dark_grey"
                            android:layout_height="wrap_content"
                            android:text="@string/create_advert_address_info"/>

                    </FrameLayout>

                    <View
                        android:id="@+id/create_advert_map_click"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_selected_with_radius" />

                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/price_guideline"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:layout_marginEnd="191dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.monty.ui.base.SubmitButton
                android:id="@+id/create_advert_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d4"
                android:layout_marginTop="@dimen/d4"
                android:layout_marginEnd="@dimen/d4"
                android:layout_marginBottom="@dimen/d4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_advert_address_card"
                app:sffr_label_disabled="@string/create_advert_add"
                app:sffr_label_idle="@string/create_advert_add"
                app:sffr_label_success="@string/create_advert_add_success" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>


